# arch-suite

./: PKGBUILD  arch-suite-1.5.0-1-x86_64.pkg.tar.zst  arch-suite-debug-1.5.0-1-x86_64.pkg.tar.zst
arch-suite-1.5.0/: FETCH_HEAD  config  packed-refs
arch-suite-1.5.0/objects/pack/: pack-e4505f11d28b731691f3dcf21e788700da962fd5.idx  pack-e4505f11d28b731691f3dcf21e788700da962fd5.rev
arch-suite-1.5.0/refs/heads/: main
legacy/v1/arch-suite-1.5.0/objects/pack/: pack-a38f06583802a5345dde99be44e6cae636b7aa90.rev
pkg/arch-suite/: .BUILDINFO  .MTREE  .PKGINFO
pkg/arch-suite-debug/: .BUILDINFO  .MTREE  .PKGINFO
src/arch-suite-1.5.0/: engine.sh
src/arch-suite-1.5.0/arch-suite-1.5.0/objects/pack/: pack-a38f06583802a5345dde99be44e6cae636b7aa90.idx  pack-a38f06583802a5345dde99be44e6cae636b7aa90.pack
src/arch-suite-1.5.0/tui-launcher/: Cargo.toml
src/arch-suite-1.5.0/tui-launcher/src/: main.rs
tui-launcher/: Cargo.toml  PKGBUILD
tui-launcher/src/: actions.rs  app.rs  event.rs  main.rs  ui.rs
tui-launcher/src/components/: stateful_list.rs
