[package]
name = "arch-suite"
version = "4.0.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A professional, TUI-driven suite to replicate, clone, and manage Arch Linux systems."

[dependencies]
ratatui = { version = "0.24.0", features = ["all-widgets"] }
crossterm = "0.27.0"
textwrap = "0.16.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
tui-input = "0.8.0"
# For parsing lsblk output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
